# spr

./: .gitignore  CMakeLists.txt  README.md  cropTest.py  model.py  my_output_2.state  package.xml  test_crop.py  test_facecut.py  test_main.py  test_predict.py  test_talker.py  test_talker2.py  test_turn.py  usbcamera.txt
Sound_source_localization_pkg/: CMakeLists.txt  package.xml  sound_localization_spr.py
Sound_source_localization_pkg/src/: sound_localization_spr.py
control_pkg/: CMakeLists.txt  package.xml
control_pkg/scripts/: .spr_control.py.swp  getting_array.py  spr_control.py  spr_control_2.py
etc/q&a/: q&a.csv
etc/question_answer/: question_answer_list.csv
image_pkg/: CMakeLists.txt  package.xml
image_pkg/scripts/: spr_image.py
launch/: spr.launch  spr_openpose.launch
q&a/: q&a.csv
requesting_an_operator_pkg/: CMakeLists.txt  package.xml  request_operator_spr.py
requesting_an_operator_pkg/launch/: spr.launch
requesting_an_operator_pkg/src/: male_female_predict.py  model.py  request_operator_spr.py
scripts/: beginning_game.py  launch.py  person_recognition.py  person_recognition_openpose.py  speech_recognition.py  speech_recognition_rotation.py  start.py  trigger.py
scripts/module/: gender_predict.py  se.py
sound_pkg/: CMakeLists.txt  package.xml
sound_pkg/dictionary/: espeak.list  (+1 more)
sound_source_localization_pkg/: CMakeLists.txt  package.xml
start_pkg/: CMakeLists.txt  package.xml  start_spr.py
the_riddle_game_pkg/: CMakeLists.txt  package.xml  riddle_game_spr.py
wait_and_turn_pkg/: CMakeLists.txt  package.xml  wait_turn_spr.py
(+14 files in other folders)
