<?xml version="1.0"?>
<package format="2">
  <name>spr</name>
  <version>0.0.0</version>
  <description>The spr package</description>
  ->
  <maintainer email="migly@todo.todo">migly</maintainer>

  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
